crates/ars-i18n/tests/ui/translate_explicit_locale_without_text.rs
use ars_i18n::Translate;

#[derive(Translate)]
#[translate(fallback = "en")]
enum BadText {
    #[translate(locale = "en")]
    Hello,
}

fn main() {}
